--- a/pom.xml
+++ b/pom.xml
@@ -95,7 +95,12 @@
             <artifactId>junit-platform-launcher</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-suite-engine</artifactId>
+        </dependency>
     </dependencies>
+
 
     <build>
         <plugins>
