--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,6 +2,8 @@
 spring:
   profiles:
     active: production
+  main:
+    allow-bean-definition-overriding: true
   jpa:
     show-sql: true
     open-in-view: false
